--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=limits-service
 spring.config.import=optional:configserver:http://localhost:8888
+spring.profiles.active=dev
 limits-service.minimum=1
 limits-service.maximum=999
